# sqlite-simple-tokenizer

./: .gitignore  Cargo.toml  README.md  RELEASES.md
src/tokenizer/: jieba_tokenizer.rs  mod.rs  utils.rs
